--- a/lib/quilts2/quilts.html
+++ b/lib/quilts2/quilts.html
@@ -14,23 +14,9 @@
 
 	<div id="input">
 		<p><strong>square size</strong> <input type="number" min="0.5" max="6" step="0.25" v-model="squareSize" /></p>
-		<p><strong>base pattern size</strong> <input type="number" min="1" max="10" step="1" v-model="matrixSize" v-on:change="resizeMatrix" /></p>
-		<p><strong>cols</strong> <input type="number" min="1" max="10" step="1" v-model="cols" /></p>
-		<p><strong>rows</strong> <input type="number" min="1" max="10" step="1" v-model="rows" /></p>
 		<p><strong>zoom</strong> <input type="range" min="1" max="30" step="1" v-model="zoom" /></p>
 
-		<!-- change to an SVG -->
-		<table><tbody>
-			<tr v-for="(row, r) in matrix">
-				<!-- REVIEW focus and blur is a bit klunky in practice -->
-				<!--  - maybe have a global keypress capture (consume numbers, bubble the rest)? -->
-				<!--  - record 'focus' as mouse moves -->
-				<!--  - this is a lot more complicated, but it will probably feel better -->
-				<td v-for="(cell, c) in row" class="swatch" v-bind:class="'c'+cell"
-					tabindex="0" v-on:mouseenter="$event.target.focus()" v-on:mouseleave="$event.target.blur()"
-					v-on:click="cycleMatrix(r, c)" v-on:keydown="keypressMatrix($event, r, c)"></td>
-			</tr>
-		</tbody></table>
+		<!-- TODO svg input to update texture -->
 	</div>
 
 	<svg v-bind:width="svgWidth" v-bind:height="svgHeight" v-bind:view-box.camel="viewBox">
@@ -44,9 +30,10 @@
 
 	<div id="metrics">
 		<dl>
-			<template v-for="(value, name) in colors">
-				<dt><span class="swatch" v-bind:class="name"></span></dt> <dd><span v-text="value"></span> count</dd>
-			</template>
+			<dt>final square size</dt> <dd><span v-text="squareSize"></span> inches</dd>
+			<dt>final width</dt> <dd><span v-text="quiltWidth"></span> inches</dd>
+			<dt>final height</dt> <dd><span v-text="quiltHeight"></span> inches</dd>
+			<dt>cut square size</dt> <dd><span v-text="cutSize"></span> inches</dd>
 		</dl>
 	</div>
 </div>
