--- a/lib/quilts2/quilts.html
+++ b/lib/quilts2/quilts.html
@@ -14,10 +14,18 @@
 
 	<div id="input">
 		<p><strong>square size</strong> <input type="number" min="0.5" max="6" step="0.25" v-model="squareSize" v-on:change="update" /></p>
+		<!-- TODO snap to (change step?, based on squareSize and rotation) -->
+		<p><strong>width</strong> <input type="number" v-model="quiltWidth" v-on:change="update" /></p>
+		<!-- TODO snap to (change step?, based on squareSize and rotation) -->
+		<p><strong>height</strong> <input type="number" v-model="quiltHeight" v-on:change="update" /></p>
+
 		<!-- TODO globalOffsetR change to radio options -45, 0, 45 -->
 		<p><strong>r</strong> <input type="number" min="-6.2" max="6.2" step="0.1" v-model="globalOffsetR" v-on:change="update" /></p>
+		<!-- TODO snap to (change step?, based on squareSize and rotation) -->
 		<p><strong>x</strong> <input type="range" min="-10" max="10" step="0.1" v-model="globalOffsetX" v-on:change="update" /></p>
+		<!-- TODO snap to (change step?, based on squareSize and rotation) -->
 		<p><strong>y</strong> <input type="range" min="-10" max="10" step="0.1" v-model="globalOffsetY" v-on:change="update" /></p>
+
 		<p><strong>zoom</strong> <input type="range" min="1" max="30" step="1" v-model="zoom" /></p>
 
 		<!-- TODO svg input to update texture -->
