--- a/lib/quilts2/quilts.html
+++ b/lib/quilts2/quilts.html
@@ -20,17 +20,20 @@
 		<!-- TODO snap to (change step?, based on squareSize and rotation) -->
 		<p><strong>height</strong> <input type="number" v-model="quiltHeight" v-on:change="update" /></p>
 
+		<h2>Pattern</h2>
+		<p>
+			<span v-for="(value, key) in palette"><input type="color" v-model="palette[key]" v-on:change="update" /></span>
+			<button class="addColor" v-on:click="palette.push('#000000')">&#x2795;</button>
+		</p>
+		<!-- TODO input to update texture -->
+
 		<h2>Position</h2>
-		<p><strong>r</strong> <input type="range" min="-360" max="360" step="15" v-model="globalOffsetR" v-on:change="update" /></p>
-		<!-- TODO snap to (change step?, based on squareSize and rotation) -->
+		<p><strong>r</strong> <input type="range" min="-180" max="180" step="15" v-model="globalOffsetR" v-on:change="update" /></p>
 		<p><strong>x</strong> <input type="range" v-bind:min="xmin" v-bind:max="xmax" v-bind:step="xsnap" v-model="globalOffsetX" v-on:change="update" /></p>
-		<!-- TODO snap to (change step?, based on squareSize and rotation) -->
 		<p><strong>y</strong> <input type="range" v-bind:min="ymin" v-bind:max="ymax" v-bind:step="ysnap" v-model="globalOffsetY" v-on:change="update" /></p>
 
 		<h2>View</h2>
 		<p><strong>zoom</strong> <input type="range" min="1" max="30" step="1" v-model="zoom" /></p>
-
-		<!-- TODO svg input to update texture -->
 	</div>
 
 	<svg v-bind:width="svgWidth" v-bind:height="svgHeight" v-bind:view-box.camel="viewBox">
