--- a/lib/quilts2/quilts.html
+++ b/lib/quilts2/quilts.html
@@ -12,6 +12,7 @@
 <body>
 <div class="container">
 
+	<!-- TODO playtest on mobile -->
 	<div id="input">
 		<h2>Basics</h2>
 		<p><strong>square size</strong> <input type="number" min="0.5" max="6" step="0.25" v-model="squareSize" v-on:change="update" /></p>
@@ -21,6 +22,8 @@
 		<p><strong>height</strong> <input type="number" v-model="quiltHeight" v-on:change="update" /></p>
 
 		<h2>Pattern</h2>
+		<p><strong>width</strong> <input type="number" min="1" max="10" v-model="textureWidth" v-on:change="resizeTexture" /></p>
+		<p><strong>height</strong> <input type="number" min="1" max="10" v-model="textureHeight" v-on:change="resizeTexture" /></p>
 		<p class="colorSelection">
 			<span v-for="(value, key) in palette">
 				<input type="radio" v-model="selectedColor" v-bind:value="key" />
