--- a/lib/quilts2/quilts.html
+++ b/lib/quilts2/quilts.html
@@ -12,7 +12,8 @@
 <body>
 <div class="container">
 
-	<!-- TODO playtest on mobile -->
+	<!-- TODO playtest on mobile. it's really hard to use there -->
+	<!-- TODO playtest on desktop. like, that share button is awful -->
 	<div id="input">
 		<h2>Basics</h2>
 		<p><strong>square size</strong> <input type="number" min="1" max="12" step="0.25" v-model="squareSize" v-on:change="update" /> inches</p>
