--- a/lib/mazes/mazes.html
+++ b/lib/mazes/mazes.html
@@ -14,6 +14,11 @@
 
 	<h1>Mazes</h1>
 
+	<table id="maze">
+		<tr v-for="row in board">
+			<td v-for="cell in row" v-bind:class="cell.class"></td>
+		</tr>
+	</table>
 
 </div>
 <script src="mazes.js"></script>
