generate button on the ui

--- a/lib/mazes/mazes.html
+++ b/lib/mazes/mazes.html
@@ -20,6 +20,10 @@
 		</tr>
 	</table>
 
+	<div class="button-bar">
+		<button type="button" v-on:click="makeNewBoard">Generate</button>
+	</div>
+
 </div>
 <script src="mazes.js"></script>
 </body>
