--- a/lib/mazes/mazes.html
+++ b/lib/mazes/mazes.html
@@ -28,6 +28,7 @@
 			<option value="kruskal">Kruskal's</option>
 		</select>
 		<button type="submit" v-on:click="makeNewBoard">Generate</button>
+		<button type="button" v-on:click="wander">Wander</button>
 	</form>
 
 </div>
