--- a/lib/mazes/mazes.html
+++ b/lib/mazes/mazes.html
@@ -26,6 +26,7 @@
 		<select v-model="type">
 			<option value="prim">Prim's</option>
 			<option value="kruskal">Kruskal's</option>
+			<option value="depthFirst">Depth First</option>
 		</select>
 		<button type="submit" v-on:click="makeNewBoard">Generate</button>
 		<button type="button" v-on:click="wander">Wander</button>
