--- a/lib/structured-links/svg.html
+++ b/lib/structured-links/svg.html
@@ -11,17 +11,32 @@
 <body>
 	<div id="root">
 		<svg :view-box.camel="viewBox">
-			<g v-for="s in stacks" class="stack">
-				<rect :x="s.x" :y="s.y" :width="s.width" :height="s.height"></rect>
-				<text :x="s.x + s.width / 2" :y="s.y + s.height / 2" v-text="s.display"></text>
+			<g class="center">
+				<circle :cx="center.x" :cy="center.y" :r="center.r" />
+				<a href="https://hackernoon.com/how-it-feels-to-learn-javascript-in-2016-d3a717dd577f">
+					<text :x="center.x" :y="center.y" v-text="center.display"></text>
+				</a>
+			</g>
 
-				<!-- TODO children-container positioning -->
-				<rect class="children-container" x="50" :y="s.y" width="150" :height="s.height"></rect>
-				<g v-for="c in s.children" class="child">
-					<rect :x="c.x" :y="c.y" :width="c.width" :height="c.height"></rect>
-					<text :x="c.x + c.width / 2" :y="c.y + c.height / 2" v-text="c.display"></text>
-				</g>
-			 </g>
+			<g v-for="s in stacks">
+				<path class="circle-stack-line" :d="s.path" />
+				<circle class="small" :cx="s.circle.x" :cy="s.circle.y" :r="s.circle.r" />
+			</g>
+
+			<g transform="translate(100, 0)">
+				<g v-for="s in stacks" class="stack">
+					<!-- s.description as hover text -->
+					<rect :x="s.x" :y="s.y" :width="s.width" :height="s.height"></rect>
+					<text :x="s.x + s.width / 2" :y="s.y + s.height / 2" v-text="s.display"></text>
+
+					<!-- TODO children-container positioning -->
+					<rect class="children-container" :x="stackChildrenLeft" :y="s.y" :width="100 - stackChildrenLeft" :height="s.height"></rect>
+					<g v-for="c in s.children" class="child">
+						<rect :x="c.x" :y="c.y" :width="c.width" :height="c.height"></rect>
+						<a :href="c.link"><text :x="c.x + c.width / 2" :y="c.y + c.height / 2" v-text="c.display"></text></a>
+					</g>
+				 </g>
+			</g>
 		</svg>
 	</div>
 	<script src="svg.js"></script>
