--- a/lib/structured-links/svg.html
+++ b/lib/structured-links/svg.html
@@ -23,24 +23,23 @@
 				<circle class="small" :cx="s.circle.x" :cy="s.circle.y" :r="s.circle.r" />
 			</g>
 
-			<g transform="translate(100, 0)">
-				<g v-for="s in stacks" class="stack">
-					<!-- s.description as hover text -->
-					<rect :x="s.x" :y="s.y" :width="s.width" :height="s.height"
-						:class="s.active ? 'active' : ''" v-on:mouseenter="hoverStart(s)" v-on:mouseleave="hoverEnd" />
-					<text :x="s.x + s.width / 2" :y="s.y + s.height / 2" v-text="s.display"></text>
+			<g v-for="s in stacks" class="stack">
+				<!-- s.description as hover text -->
+				<rect :x="s.x" :y="s.y" :width="s.width" :height="s.height"
+					:class="s.active ? 'active' : ''" v-on:mouseenter="hoverStart(s)" v-on:mouseleave="hoverEnd" />
+				<text :x="s.x + s.width / 2" :y="s.y + s.height / 2" v-text="s.display"></text>
 
-					<!-- TODO children-container positioning -->
-					<rect class="children-container" :x="stackChildrenLeft" :y="s.y" :width="100 - stackChildrenLeft" :height="s.height"></rect>
+				<rect class="children-container" :x="s.container.x" :y="s.y" :width="s.container.width" :height="s.height"></rect>
 
-					<g v-for="c in s.children" :class="c.type + ' child' + (c.active ? ' active' : '')" v-on:mouseenter="hoverStart(c)" v-on:mouseleave="hoverEnd">
-						<rect :x="c.x" :y="c.y" :width="c.width" :height="c.height"></rect>
+				<g v-for="c in s.children" :transform="translate(c.x, c.y)"
+					:class="c.type + ' child' + (c.active ? ' active' : '')" v-on:mouseenter="hoverStart(c)" v-on:mouseleave="hoverEnd">
 
-						<!-- HACK duplicate -->
-						<a v-if="c.link" :href="c.link"><text :x="c.x + c.width / 2" :y="c.y + c.height / 2" v-text="c.display"></text></a>
-						<text v-if="!c.link" :x="c.x + c.width / 2" :y="c.y + c.height / 2" v-text="c.display"></text>
-					</g>
-				 </g>
+					<rect :x="0" :y="0" :width="c.width" :height="c.height"></rect>
+
+					<!-- HACK duplicate markup -->
+					<a v-if="c.link" :href="c.link"><text :x="c.width / 2" :y="c.height / 2" v-text="c.display"></text></a>
+					<text v-if="!c.link" :x="c.width / 2" :y="c.height / 2" v-text="c.display"></text>
+				</g>
 			</g>
 		</svg>
 	</div>
