--- a/lib/structured-links/svg.html
+++ b/lib/structured-links/svg.html
@@ -18,29 +18,33 @@
 				</a>
 			</g>
 
-			<g v-for="s in stacks" :class="s.type + (s.circle.active ? ' active' : '')" v-on:mouseenter="hoverStart(s.circle)" v-on:mouseleave="hoverEnd">
-				<path class="circle-stack-line" :d="s.path" />
+			<!-- lines to stacks -->
+			<g v-for="s in stacks" :class="[s.type, (s.circle.active ? 'active' : '')]" v-on:mouseenter="hoverStart(s.circle)" v-on:mouseleave="hoverEnd">
+				<path :id="s.circle.id" class="circle-stack-line" :d="s.path" />
 				<circle class="small" :cx="s.circle.x" :cy="s.circle.y" :r="s.circle.r" />
 			</g>
 
 			<g v-for="s in stacks" class="stack">
-				<!-- s.description as hover text -->
-				<rect :x="s.x" :y="s.y" :width="s.width" :height="s.height"
-					:class="s.active ? 'active' : ''" v-on:mouseenter="hoverStart(s)" v-on:mouseleave="hoverEnd" />
+				<rect :id="s.id" :x="s.x" :y="s.y" :width="s.width" :height="s.height"
+					:class="[s.type, (s.active ? 'active' : '')]" v-on:mouseenter="hoverStart(s)" v-on:mouseleave="hoverEnd" />
 				<text :x="s.x + s.width / 2" :y="s.y + s.height / 2" v-text="s.display"></text>
 
 				<rect class="children-container" :x="s.container.x" :y="s.y" :width="s.container.width" :height="s.height"></rect>
 
 				<g v-for="c in s.children" :transform="translate(c.x, c.y)"
-					:class="c.type + ' child' + (c.active ? ' active' : '')" v-on:mouseenter="hoverStart(c)" v-on:mouseleave="hoverEnd">
+					:class="[c.type, 'child', (c.active ? 'active' : '')]" v-on:mouseenter="hoverStart(c)" v-on:mouseleave="hoverEnd">
 
-					<rect :x="0" :y="0" :width="c.width" :height="c.height"></rect>
+					<rect :id="c.id" :x="0" :y="0" :width="c.width" :height="c.height"></rect>
 
 					<!-- HACK duplicate markup -->
 					<a v-if="c.link" :href="c.link"><text :x="c.width / 2" :y="c.height / 2" v-text="c.display"></text></a>
 					<text v-if="!c.link" :x="c.width / 2" :y="c.height / 2" v-text="c.display"></text>
 				</g>
 			</g>
+
+			<template v-for="s in stacks">
+				<tooltip :open="s.hover" :for="s.id" :title="s.description" />
+			</template>
 		</svg>
 	</div>
 	<script src="svg.js"></script>
